--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,9 @@ jobs:
     - name: Commit and push if changed
       run: |-
         git diff
-        git config --global user.email "actions@users.noreply.github.com"
-        git config --global user.name "README-bot"
+        git config --global user.email "${{ secrets.GIT_USEREMAIL }}"
+        git config --global user.name "${{ secrets.GIT_USERNAME }}"
+        git config --global user.token "${{ secrets.GIT_CREDENTIALS }}"
         git add -A
         git commit -m "Updated blogpost" || exit 0
         git push
