--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
     - cron:  '0 5 * * *' # run every day at 5 am
 jobs:
   build:
-    runs-on: macos-11
+    runs-on: ubuntu-latest
     steps:
     - name: Check out repo
       uses: actions/checkout@v4
